@@ -1,3 +1,6 @@
+26
+* Add missing add_badge code (the toolkit badge code is not yet upstream).
+
 25
 
 * Added gallery of sample projects (Ignacio Rodriguez)
